# HydroCODE-Fusion

./: .gitignore  Cppcheck.sh  Doxyfile  Makefile  README.md  _1D_f_io.c
1D_LAG_GRP/: Doxyfile  LAG_source.c  finite_difference_solver.h
1D_LAG_GRP/Riemann_solver/: Riemann_solver_exact_me.c
1D_LAG_GRP/data_in/: 6.1P.txt  6.1RHO.txt  6.1U.txt  6.2.1U.txt  6.2.3config.txt
1D_LAG_GRP/file_io/: _1D_f_io.c
1D_LAG_GRP/finite_difference_solver/: GRP_solver_source.c  linear_GRP_solver_Edir.c  linear_GRP_solver_LAG.c
1D_LAG_GRP/src/: LAG_source.c  make.sh
1D_LAG_Gdounov/: Doxyfile  LAG_source.c  Riemann_solver.h  file_io.h  finite_difference_solver.h  make.sh
1D_LAG_Gdounov/Riemann_solver/: Riemann_solver_exact.c  Riemann_solver_exact_Toro.c
1D_LAG_Gdounov/data_in/: 6.2.1config.txt
1D_LAG_Gdounov/file_io/: _1D_f_io.c
1D_LAG_Gdounov/finite_difference_solver/: Godunov_solver_source.c
1D_LAG_Gdounov/src/: LAG_source  LAG_source.c  make.sh
Specification/: Specification.tex
data_in/: clear_all.sh  data_initialize.sh  data_initilize.sh
data_out/: clear_all.sh  preplot.sh
doc/: Terminal_color.mk  config.csv
doc/Specification/: Specification.tex
doc/detector/: configure.ac
src/: Cppcheck.sh  LAG_source  LAG_source.c  Makefile  flux_solver.c  make.sh
src/LAG_source/: LAG_source.c  make.sh
src/MAKE/: Cppcheck.sh  Makefile  hydrocode.mk  module.mk
src/MAKE/Autoconf/: configure.ac  configure.sh
src/Riemann_solver/: Riemann_solver_exact.c  Riemann_solver_exact_Ben.c  Riemann_solver_exact_Toro.c  grp_solver_spher.c  hll_solver.c  inp.h  makefile  (+16 more)
(+468 files in other folders)
